0.03  Sun 14 Oct 11:03:52 IST 2012
    - Moved test.pl under examples so it won't interfere with the building
    and testing.
        - See https://rt.cpan.org/Public/Bug/Display.html?id=40771
        - Thanks to CHORNY and praveenkumar for the reports.
    - Correct the POD.
        - Add t/pod.t .
    - Convert the distribution to Build.PL .

0.02  Fri Feb 23 06:36:03 PST 2007
	- Fix CPAN bug id 2463: help now unconditionally calls $o->summary()

0.01  Fri Jan 25 12:15:25 PST 2002	@67
	- Documentation updates
	- Read the README
	- Added cmd_prefix() and cmd_suffix()
	- Reorganized the handlers to make more sense, given the above
	- Preparing for initial release

0.01  Wed Jan 23 02:46:51 PST 2002	@66
	- Lots of documentation additions
	- Added a README
	- Access to the Term::ReadLine object
	- Added precmd(), postcmd(), preloop(), postloop(), init(), and fini()
	  callbacks.
	- Added a cmd() method, which parses and runs the command-line you
	  pass in. Used internally by cmdloop().

0.01  Sat Dec 22 19:04:06 PST 2001	@36
	- Added some more documentation and features to Term::Shell

0.01  Sat Dec 15 00:05:08 PST 2001	@26
	- Remove 'quit' alias for 'exit' in Term::Shell. Smaller is better.
	- Changed default prompt to 'shell> '.
	- Added and documented the prompt_user() method.
	- Added the prompt_user() method to the interactive test.

0.01  Wed Dec 12 09:31:37 PST 2001	@19
	- Added the comp_() sub, to override the top-level command-completion
	  routine.

0.01  Wed Dec 12 09:01:52 PST 2001	@18
	- Fixed a bug which prevented completion from working

0.01  Wed Dec 12 01:08:48 PST 2001	@17
	- Added catch_*() methods to catch missing handlers.
	- Added an example called psh.pl (Perl SHell)
	- Fixed order of comp_*() handlers to match Term::ReadLine::Perl

0.01  Tue Dec 11 12:18:58 PST 2001	@16
	- Added tests and documentation. Needs more doc.

0.01  Mon Dec 10 10:08:54 PST 2001	@14
	- Adding initial version of Term::Shell to the repository. Needs
	  documentation.